--- a/.github/workflows/solar-crawler.yml
+++ b/.github/workflows/solar-crawler.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install selenium webdriver-manager python-dotenv
+          pip install selenium webdriver-manager
 
       - name: Run crawler
         env:
